Fixing alignment issue

--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ a:hover {
 .timeline {
     position: relative;
     max-width: 1200px;
-    margin: 15px 100px 15px 100px;
+    margin: 100px auto;
     font-family: "Crimson Text", serif;
 }
 
@@ -303,14 +303,4 @@ footer {
     margin: auto;
     background-color: grey;
     color: white;
-}
-
-@media screen and (max-width: 375px) {
-    .intro {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        height: 100vh;
-    }
 }
